[package]
name = "tora"
license-file = "LICENSE"
description = "A lite, byte-based serialization and deserialization library."
repository = "https://github.com/imajindevon/tora"
readme = "README.md"
version = "0.1.8"
edition = "2021"
categories = ["data-structures", "encoding", "filesystem", "network-programming", "parsing"]
keywords = ["bytes", "network", "packet", "serde", "bson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tora_derive = { version = "0.1.6", optional = true }

[features]
derive = ["tora_derive"]
read_impl = []
dyn_impl = []

default = ["tora_derive", "read_impl", "dyn_impl"]
